replace FBV-controllers with CBV-controllers

--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -184,7 +184,7 @@
             </a>
 
             <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-                <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="{% url 'catalog:home' %}">Каталог</a>
+                <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="{% url 'catalog:product_list' %}">Каталог</a>
             </nav>
             <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
                 <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="{% url 'catalog:contacts' %}">Контакты</a>
