--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -1,4 +1,4 @@
-{% extends 'main/base.html' %}
+{% extends 'catalog/base.html' %}
 {% load my_tags %}
 {% block title %}
     <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
