--- a/catalog/templates/catalog/includes/product_card.html
+++ b/catalog/templates/catalog/includes/product_card.html
@@ -10,7 +10,7 @@
                 <li>{{ object.price }}</li>
                 <li>{{ object.category }}</li>
             </ul>
-            <a href="{% url 'catalog:view' object.pk %}"
+            <a href="{% url 'catalog:product_view' object.pk %}"
                class="w-100 btn btn-lg btn-outline-primary">Посмотреть</a>
         </div>
     </div>
