--- a/catalog/templates/catalog/blog_detail.html
+++ b/catalog/templates/catalog/blog_detail.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="card-footer">
                     Дата создания: {{ object.created_at }}
-                    Просмотры: {{ object.view_count }}
+                    Просмотры: {{ object.views }}
                 </div>
             </div>
         </div>
