--- a/catalog/templates/catalog/blog_confirm_delete.html
+++ b/catalog/templates/catalog/blog_confirm_delete.html
@@ -8,7 +8,7 @@
                 <div class="card-body">
                     <form method="post">
                         {% csrf_token %}
-                        <p>Хотите удалить blog "{{ object.title }}"</p>
+                        <p>Хотите удалить "{{ object.title }}"?</p>
                         <button type="submit" class="btn btn-danger">Подтвердить</button>
                         <a href="{% url 'catalog:blog_list' %}" class="btn btn-warning">Отмена</a>
                     </form>
