--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -190,7 +190,7 @@
                 <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="{% url 'catalog:contacts' %}">Контакты</a>
             </nav>
             <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-                <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="{% url 'catalog:blog_list' %}">Blog</a>
+                <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="{% url 'catalog:blog_list' %}">Блог</a>
             </nav>
         </div>
     </header>
