--- a/catalog/templates/catalog/includes/product_card.html
+++ b/catalog/templates/catalog/includes/product_card.html
@@ -1,6 +1,6 @@
 {% load my_tags %}
-<div class="col mb-5">
-    <div class="card mb-4 rounded-3 shadow-sm h-100">
+<div class="col md-4">
+    <div class="card mb-4 shadow">
         <div class="card-header py-3">
             <h4 class="my-0 fw-normal">{{ object.product_title }}</h4>
         </div>
@@ -10,8 +10,14 @@
                 <li>{{ object.price }}</li>
                 <li>{{ object.category }}</li>
             </ul>
-            <a href="{% url 'catalog:product_view' object.pk %}"
-               class="w-100 btn btn-lg btn-outline-primary">Посмотреть</a>
+            <div class="btn-group">
+                <a href="{% url 'catalog:product_edit' object.pk %}"
+                   class="btn btn-lg btn-outline-secondary">Редактировать</a>
+                <a href="{% url 'catalog:product_delete' object.pk %}"
+                   class="btn btn-lg btn-outline-danger">Удалить</a>
+                <a href="{% url 'catalog:product_view' object.pk %}"
+                   class="btn btn-lg btn-outline-primary">Посмотреть</a>
+            </div>
         </div>
     </div>
 </div>
