--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -1,20 +1,12 @@
 {% extends 'catalog/base.html' %}
-{% block title %}
-<div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-    <h1 class="display-4 fw-normal text-body-emphasis">{{ object.product_title }}</h1>
-</div>
-{% endblock %}
-
 {% block content %}
-<div class="col-12 mb-5">
+<div class="col mb-4">
     <a class="btn btn-outline-primary" href="{% url 'catalog:product_create' %}">Добавить товар</a>
 </div>
-<div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
 
+<div class="col-md-4">
     {% for object in object_list %}
         {% include 'catalog/includes/product_card.html' %}
     {% endfor %}
-
 </div>
-
 {% endblock %}
