--- a/catalog/templates/catalog/product_form.html
+++ b/catalog/templates/catalog/product_form.html
@@ -18,6 +18,24 @@
                 </button>
             </div>
         </div>
+        <div class="col-6">
+            <div class="card">
+                <div class="card-header">
+                    <h3 class="card-title">
+                        Версии товара
+                    </h3>
+                </div>
+                <div class="card-body">
+                    {{ formset.management_form}}
+                    {% for form in formset.forms %}
+                    {{ form.as_p }}
+                        {% if not forloop.last %}
+                        <hr>
+                        {% endif %}
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
     </form>
 </div>
 {% endblock %}
