--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -4,9 +4,11 @@
     <a class="btn btn-outline-primary" href="{% url 'catalog:product_create' %}">Добавить товар</a>
 </div>
 
-<div class="col-md-6">
-    {% for object in object_list %}
-        {% include 'catalog/includes/product_card.html' %}
-    {% endfor %}
+<div class="container">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+            {% for object in object_list %}
+            {% include 'catalog/includes/product_card.html' %}
+            {% endfor %}
+    </div>
 </div>
 {% endblock %}
