--- a/catalog/templates/catalog/includes/inc_main_menu.html
+++ b/catalog/templates/catalog/includes/inc_main_menu.html
@@ -18,5 +18,15 @@
             <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
                 <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="{% url 'catalog:blog_list' %}">Блог</a>
             </nav>
+            {% if user.is_authenticated %}
+                <a class="btn btn-outline-primary" href="{% url 'users:profile' %}">Профиль</a>
+                <form method="post" action="{% url 'users:logout' %}">
+                    {% csrf_token %}
+                    <button class="btn btn-outline-primary" type="submit">Выйти</button>
+                </form>
+            {% else %}
+                <a class="btn btn-outline-primary" href="{% url 'users:login' %}">Войти</a>
+                <a class="btn btn-outline-primary" href="{% url 'users:register' %}">Регистрация</a>
+            {% endif %}
         </div>
     </header>
