--- a/blog/templates/blog/blog_confirm_delete.html
+++ b/blog/templates/blog/blog_confirm_delete.html
@@ -10,7 +10,7 @@
                         {% csrf_token %}
                         <p>Хотите удалить "{{ object.title }}"?</p>
                         <button type="submit" class="btn btn-danger">Подтвердить</button>
-                        <a href="{% url 'catalog:blog_list' %}" class="btn btn-warning">Отмена</a>
+                        <a href="{% url 'blog:list' %}" class="btn btn-warning">Отмена</a>
                     </form>
                 </div>
             </div>
