--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -1,7 +1,7 @@
 {% extends 'catalog/base.html' %}
 {% block content %}
 <div class="col-12 mb-5">
-    <a class="btn btn-outline-primary" href="{% url 'catalog:blog_create' %}">Добавить материал</a>
+    <a class="btn btn-outline-primary" href="{% url 'blog:create' %}">Добавить материал</a>
 </div>
 {% for object in object_list %}
 <div class="col-md-4">
@@ -12,11 +12,11 @@
             </p>
             <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                    <a href="{% url 'catalog:blog_view' object.pk %}"
+                    <a href="{% url 'blog:view' object.pk %}"
                        class="btn btn-sm btn-outline-secondary">View</a>
-                    <a href="{% url 'catalog:blog_edit' object.pk %}"
+                    <a href="{% url 'blog:edit' object.pk %}"
                        class="btn btn-sm btn-outline-secondary">Edit</a>
-                    <a href="{% url 'catalog:blog_delete' object.pk %}"
+                    <a href="{% url 'blog:delete' object.pk %}"
                        class="btn btn-sm btn-outline-danger">Delete</a>
                 </div>
             </div>
