--- a/catalog/templates/catalog/includes/inc_main_menu.html
+++ b/catalog/templates/catalog/includes/inc_main_menu.html
@@ -16,7 +16,7 @@
                 <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="{% url 'catalog:contacts' %}">Контакты</a>
             </nav>
             <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-                <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="{% url 'catalog:blog_list' %}">Блог</a>
+                <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="{% url 'blog:list' %}">Блог</a>
             </nav>
             {% if user.is_authenticated %}
                 <a class="btn btn-outline-primary" href="{% url 'users:profile' %}">Профиль</a>
