--- a/users/templates/users/change_password.html
+++ b/users/templates/users/change_password.html
@@ -8,15 +8,14 @@
             <div class="card">
                 <div class="card-header">
                     <div class="card-title">
-                        Вход
+                        Введите почту
                     </div>
                 </div>
                 <div class="card-body">
                     {% csrf_token %}
                     {{ form.as_p }}
-                    <button type="submit" class="btn btn-primary">Войти</button>
+                    <button type="submit" class="btn btn-primary">Отправить пароль</button>
                 </div>
-                    <a class="btn btn-outline-primary" href="{% url 'users:change_password' %}">Сменить пароль</a>
                 <div class="card-footer"></div>
             </div>
         </div>
